--- a/app/src/main/res/layout/add_product_fragment.xml
+++ b/app/src/main/res/layout/add_product_fragment.xml
@@ -10,7 +10,7 @@
 
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/image_product"
         android:layout_width="140dp"
         android:layout_height="148dp"
         android:background="@drawable/background_product_image"
@@ -31,7 +31,7 @@
         android:layout_marginTop="40dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView">
+        app:layout_constraintTop_toBottomOf="@+id/image_product">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/input_description"
@@ -52,6 +52,7 @@
         app:layout_constraintTop_toBottomOf="@+id/input_layout_description">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/input_price"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
