--- a/app/src/main/res/layout/add_product_fragment.xml
+++ b/app/src/main/res/layout/add_product_fragment.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="@dimen/screen_padding"
-    tools:context=".ui.products.addProduct.AddProductFragment">
+    tools:context=".ui.addProduct.AddProductFragment">
 
 
     <ImageView
