--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -18,7 +18,7 @@
 
     <dialog
         android:id="@+id/addProductFragment"
-        android:name="br.com.douglasmotta.whitelabeltutorial.ui.products.addProduct.AddProductFragment"
+        android:name="br.com.douglasmotta.whitelabeltutorial.ui.addProduct.AddProductFragment"
         android:label="@string/add_product_screen_title"
         tools:layout="@layout/add_product_fragment" />
 </navigation>
