--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -20,6 +20,7 @@
         android:id="@+id/text_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        style="@style/Text.Primary"
         android:layout_marginTop="16dp"
         android:textAlignment="center"
         android:textSize="18sp"
@@ -27,6 +28,7 @@
 
     <TextView
         android:id="@+id/text_price"
+        style="@style/Text.Secondary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
